# fastsmb

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
py_types/: Cargo.toml
py_types/src/: errors.rs  lib.rs
smb/: Cargo.toml
smb/src/: conn.rs  lib.rs
src/: lib.rs  main.bak
tests/: client.sh
