[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "fastsmb"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]